--- a/mapfre-ui/index.html
+++ b/mapfre-ui/index.html
@@ -210,8 +210,8 @@
                             </ul>
                         </div>
                     </div>
-                </div>    <div class="app-main__outer">
-                    <div class="app-main__inner">
+                </div>    <div class="app-main__outer" style="height: 100vh;">
+                    <div class="app-main__inner mb-5">
                         <div class="app-page-title">
                             <div class="page-title-wrapper">
                                 <div class="page-title-heading">
